[package]
name = "unreel"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
owo-colors = "4.2.3"
quick-xml = "0.38.4"
reqwest = "0.12.28"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }

[lints.clippy]
bool_comparison = "allow"
